syntax = "proto3";

package keyaccessserverregistry;

import "buf/validate/validate.proto";
import "common/common.proto";
import "google/api/annotations.proto";

/*
   Descriptor for a KAS
*/
message KeyAccessServer {
  string id = 1 [(buf.validate.field).required = true];

  common.Metadata metadata = 2;

  string name = 3 [(buf.validate.field).required = true];

  oneof public_key {
    // kas public key url - optional since can also be retrieved via public key
    string remote = 4;

    //public key - optional since can also be retrieved via url
    string local = 5;
  }
}

message KeyAccessServerCreateUpdate {
  // Optional metadata for the attribute definition
  common.MetadataMutable metadata = 1;

  string name = 2 [(buf.validate.field).required = true];

  PublicKey public_key = 3 [(buf.validate.field).required = true];
}

message PublicKey {
  oneof public_key {
    // kas public key url - optional since can also be retrieved via public key
    string remote = 1 [
      (buf.validate.field).required = true,
      (buf.validate.field).cel = {
        id: "fqn_format",
        message: "FQN must start with a valid URL (e.g., 'https://demo.com/') followed by additional segments. Each segment must start and end with an alphanumeric character, can contain hyphens, alphanumeric characters, and slashes.",
        expression: "this.matches('^https://[a-zA-Z0-9]([a-zA-Z0-9\\\\-]{0,61}[a-zA-Z0-9])?(\\\\.[a-zA-Z0-9]([a-zA-Z0-9\\\\-]{0,61}[a-zA-Z0-9])?)*(/.*)?$')"
      }
    ];

    //public key - optional since can also be retrieved via url
    string local = 2;
  }
}

message GetKeyAccessServerRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message GetKeyAccessServerResponse {
  KeyAccessServer key_access_server = 1;
}

message ListKeyAccessServersRequest {}
message ListKeyAccessServersResponse {
  repeated KeyAccessServer key_access_servers = 1;
}

message CreateKeyAccessServerRequest {
  KeyAccessServerCreateUpdate key_access_server = 1 [(buf.validate.field).required = true];
}
message CreateKeyAccessServerResponse {
  KeyAccessServer key_access_server = 1;
}

message UpdateKeyAccessServerRequest {
  string id = 1 [(buf.validate.field).required = true];
  KeyAccessServerCreateUpdate key_access_server = 2 [(buf.validate.field).required = true];
}
message UpdateKeyAccessServerResponse {
  KeyAccessServer key_access_server = 1;
}

message DeleteKeyAccessServerRequest {
  string id = 1 [(buf.validate.field).required = true];
}
message DeleteKeyAccessServerResponse {}

service KeyAccessServerRegistryService {
  rpc ListKeyAccessServers(ListKeyAccessServersRequest) returns (ListKeyAccessServersResponse) {
    option (google.api.http) = {get: "/key-access-servers"};
  }

  rpc GetKeyAccessServer(GetKeyAccessServerRequest) returns (GetKeyAccessServerResponse) {
    option (google.api.http) = {get: "/key-access-servers/{id}"};
  }

  rpc CreateKeyAccessServer(CreateKeyAccessServerRequest) returns (CreateKeyAccessServerResponse) {
    option (google.api.http) = {
      post: "/key-access-servers"
      body: "key_access_server"
    };
  }
  rpc UpdateKeyAccessServer(UpdateKeyAccessServerRequest) returns (UpdateKeyAccessServerResponse) {
    option (google.api.http) = {
      put: "/key-access-servers/{id}"
      body: "key_access_server"
    };
  }

  rpc DeleteKeyAccessServer(DeleteKeyAccessServerRequest) returns (DeleteKeyAccessServerResponse) {
    option (google.api.http) = {delete: "/key-access-servers/{id}"};
  }
}
